@@ -1,5 +1,7 @@
 == master
 
+* Add PluginAWeek::StateMachine::Machine#states
+* Add PluginAWeek::StateMachine::Event#transitions
 * Allow creating transitions with no from state (effectively allowing the transition for *any* from state)
 * Reduce the number of objects created for each transition
 
